--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "local-storage-fallback": "^4.1.1",
+    "normalize.css": "^8.0.1",
+    "props-type": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-use": "^15.3.4",
+    "styled-components": "^5.2.0",
+    "styled-theming": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
